# rayngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Kconfig  LICENSE  README.md  TODO.md  defconfig  mw.odin
.obsidian/: app.json  graph.json  workspace.json
cmake/: config.cmake  deps.cmake  help.cmake  hootools.cmake  kconfig.cmake  nixos.cmake  odin.cmake  utils.cmake
nixos/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml.in  flake.nix
raygui/: CMakeLists.txt  README.md  gui_ModelWindow.h  modelwindow.rgl  raygui.odin
res/: CMakeLists.txt  mini_space_pack_fbx2gltf.sh.in
res/Mini space pack/: Corvette.glb  Corvette.mtl  Destroyer.glb  Destroyer.mtl  Fighter.glb  Fighter.mtl  Salvager.glb  Salvager.mtl  Scout.glb  Scout.mtl
src/: CMakeLists.txt  TODO.md  spatial_hash_map.odin
src/ecs/: ecs.odin
src/odinutil/math/linalg/: linalg.odin
src/raygui/: CMakeLists.txt  gui_ModelWindow.h  libraygui.c.in
src/raylibutil/: raylibutil.odin
src/rigid_body/: rigid_body.odin
src/spatial_hash_map/: spatial_hash_map.odin
src/transform/: transform.odin
src/ui/: ui.odin  units.odin
src/ui/focus/: focus.odin
src/ui/mouse/: mouse.odin
src/ui/selection/: TODO.md  selection.odin
test/: CMakeLists.txt  TODO.md
